// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterTypeLabel for ROSA hypershift 1`] = `
<Tooltip
  content="Red Hat OpenShift Service on AWS"
>
  <span
    data-testid="clusterType"
  >
    ROSA
    <br />
    <PreviewLabel
      creationDateStr="2021-01-10T15:17:16.278663Z"
    />
  </span>
</Tooltip>
`;

exports[`ClusterTypeLabel for classic ROSA 1`] = `
<Tooltip
  content="Red Hat OpenShift Service on AWS"
>
  <span
    data-testid="clusterType"
  >
    ROSA
  </span>
</Tooltip>
`;
